add some ignore files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 Learn-SQL-master*
 datasets
+English-Dictionary-Database/
+LeetCode/
+de-en/
+mysqlsampledatabase.sql
+mysqlsampledatabase.zip
+test.db
